--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -122,7 +122,7 @@
     <main class="col-9">
       <article>Quảng cáo</article>
       <div class="row">
-        <div class="col-3 card" style="width: 18rem;">
+        <div class="col-3 card" style="width: 14rem; margin-right: 10px;">
           <img src="https://cdn.tgdd.vn/2021/04/CookProductThumb/620-620x620-90.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Hamburge Jolibee</h5>
@@ -131,8 +131,8 @@
             <a href="#" class="btn btn-primary">Add to Cart</a>
           </div>
         </div>
-        <div class="col-3 card" style="width: 18rem;">
-          <img src="img/hamburger.jpg" class="card-img-top" alt="...">
+        <div class="col-3 card" style="width: 14rem;">
+          <img src="https://cdn.tgdd.vn/2021/04/CookProductThumb/620-620x620-90.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Hamburge Jolibee</h5>
             <p class="card-text">60.000đ</p>
