--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chi tiết sản phẩm</title>
-
+    <link rel="stylesheet" th:href="@{detail.css}">
     <style>
         /* ----- Variables ----- */
         /* ----- Global ----- */
@@ -222,11 +222,13 @@
             top: 0;
             left: 5%;
         }
-        .back-to-shopping a{
+
+        .back-to-shopping a {
             text-decoration: none;
             color: white !important;
         }
     </style>
+
 </head>
 
 <body>
