--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -21,16 +21,16 @@
           <div class="card" style="border-radius: 1rem;">
             <div class="row g-0">
               <div class="col-md-6 col-lg-5 d-none d-md-block">
-                <img src="https://i.pinimg.com/564x/40/f9/68/40f968c4b396740f27e79c1ee3e2faa0.jpg"
-                  alt="login form" class="img-fluid" style="border-radius: 1rem 0 0 1rem;" />
+                <img src="https://i.pinimg.com/564x/40/f9/68/40f968c4b396740f27e79c1ee3e2faa0.jpg" alt="login form"
+                  class="img-fluid" style="border-radius: 1rem 0 0 1rem;" />
               </div>
               <div class="col-md-6 col-lg-7 d-flex align-items-center">
                 <div class="card-body p-4 p-lg-5 text-black">
 
-                  <form>
+                  <form class="loginForm" th:action="@{/login}" method="post" onsubmit="return validateLoginForm()">
 
                     <div class="d-flex align-items-center mb-3 pb-1">
-                      
+
                       <span class="h1 fw-bold mb-0">Risa Shop Food</span>
                     </div>
 
@@ -38,25 +38,28 @@
 
                     <div class="form-outline mb-4">
                       <label class="form-label" for="email">Email address</label>
-                      <input type="email" id="email" class="form-control form-control-lg" />
-                      
+                      <input type="email" id="email" name="email" class="form-control form-control-lg" />
+
                     </div>
 
                     <div class="form-outline mb-4">
                       <label class="form-label" for="password">Password</label>
-                      <input type="password" id="password" class="form-control form-control-lg" />
+                      <input type="password" id="password" name="password" class="form-control form-control-lg" />
                     </div>
 
                     <div class="pt-1 mb-4">
-                      <button class="btn btn-dark btn-lg btn-block" type="button">Login</button>
+                      <button class="btn btn-dark btn-lg btn-block" type="submit">Login</button>
                     </div>
 
                     <a class="small text-muted" href="#!">Forgot password?</a>
-                    <p class="mb-5 pb-lg-2" style="color: #393f81;">Don't have an account? <a href="#!"
+                    <p class="mb-5 pb-lg-2" style="color: #393f81;">Don't have an account? <a href="/register"
                         style="color: #393f81;">Register here</a></p>
                     <a href="#!" class="small text-muted">Terms of use.</a>
                     <a href="#!" class="small text-muted">Privacy policy</a>
                   </form>
+                  <div th:if="${param.error}" class="alert alert-danger" role="alert">
+                    <p th:text="${error}"></p>
+                  </div>
 
                 </div>
               </div>
@@ -67,5 +70,20 @@
     </div>
   </section>
 </body>
+<script>
+
+
+  function validateLoginForm() {
+    var username = document.getElementById("email").value;
+    var password = document.getElementById("password").value;
+
+    if (username == "" || password == "") {
+      alert("Please fill in both username and password.");
+      return false;
+    }
+
+    return true;
+  }
+</script>
 
 </html>
