--- a/src/main/resources/templates/purchasePage.html
+++ b/src/main/resources/templates/purchasePage.html
@@ -23,10 +23,22 @@
             /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
             background: linear-gradient(to top left, rgba(205, 156, 242, 1), rgba(246, 243, 255, 1))
         }
+        .back-to-shopping {
+            position: fixed;
+            top: 0;
+            left: 5%;
+        }
+        .back-to-shopping a{
+            text-decoration: none;
+            color: white !important;
+        }
     </style>
 </head>
 
 <body>
+    <h4 class="back-to-shopping">
+        <a href="/">Back to shopping</a>
+    </h4>
     <section class="h-100 gradient-custom">
         <div class="container py-5 h-100">
             <div class="row d-flex justify-content-center align-items-center h-100">
